# i-ink

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  example.env  htest.py  pyproject.toml  run.py  start.sh  wkd.png_x
i_ink/: display.py  epd7in5_V2.py  main.py  render.py  trains.py  transform.py  weather.py
i_ink/display/: __init__.py  epd7in5_V2.py  interface.py  mock.py  real.py
tests/: test_main.py  test_render.py  test_trains.py  test_transform.py  test_weather.py
tests/data/: alert_status.txt
